# Grammar-Fuzzer

./: .gitignore  CMakeLists.txt  build.sh  build_cov.sh  build_tools.sh  build_wrapper.sh  cov_map.py  gen_hints.sh  gen_hints_wrapper.sh  readme.md  requirements.txt  run.sh  run_cov.sh
build_cpython/: .gitignore  CMakeLists.txt  build.sh  build_cov.sh  build_wrapper.sh  cpython-cov.nix  cpython-inst.nix  gen_hints.sh  gen_hints_wrapper.sh  run.sh  run_cov.sh
build_lua/: CMakeLists.txt  build.sh  build_cov.sh  build_wrapper.sh  gen_hints.sh  gen_hints_wrapper.sh  lua-pkg.nix  run.sh  run_cov.sh
cov/: .gitignore  CMakeLists.txt  main.cpp
scripts/: cpython-cov-pkg.nix  cpython-cov.nix  cpython-inst-pkg.nix  cpython-inst.nix  cpython-instrumented.nix  cpython-pkg.nix  cpython.nix  nlohmann_json_custom.nix
src/: FuzzSchedulerState.cpp  FuzzSchedulerState.hpp  UI.cpp  UI.hpp  ast.cpp  ast.hpp  deepcopy.cpp  discovery_log.cpp  driver.hpp  emit.cpp  emit.hpp  entry.cpp  fuzzer.cpp  fuzzer.hpp  log.hpp  mutators.cpp  mutators.hpp  naive_havoc.cpp  serialization.hpp  variableProvider.cpp
src/driver/python/: .gitignore  builtins.py  driver.cpp  driver.py  timeOutRunner.cpp  timeOutRunner.hpp
src/mutators/: declation_mutator.cpp  execution_generator.cpp
targets/CPython/: .gitignore  CMakeLists.txt  builtins.cpp  builtins.py  convert.cpp  cov.cpp  driver.py  dumper.cpp  dumper.hpp  fork.cpp.txt  target.cpp  target.hpp  test.cpp
targets/Lua/: builtins.cpp  builtins.json  builtins_gen.lua  convert.cpp  cov.cpp  dumper.cpp  dumper.hpp  target.cpp  target.hpp  test.cpp
test/: CMakeLists.txt
test/driver/python/: ast_test.json  test.cpp
tools/: CMakeLists.txt  main.cpp
